// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmployerBenefits when the claim contains employer benefits data renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Other leave, benefits, and income"
>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": true,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint={
      <React.Fragment>
        <LeaveDatesAlert
          endDate="2021-06-01"
          startDate="2021-01-01"
        />
        <p>
          The employer-sponsored benefits you must report are:
        </p>
        <ul
          className="usa-list"
        >
          <li>
            Temporary disability insurance, for either short-term or long-term disability
          </li>
          <li>
            Permanent disability insurance
          </li>
          <li>
            Family or medical leave benefits, such as a parental leave program
          </li>
        </ul>
        <Trans
          i18nKey="pages.claimsEmployerBenefits.hintBody"
          tOptions={
            Object {
              "employer_fein": "12-3456789",
            }
          }
        />
      </React.Fragment>
    }
    label="Will you use any employer-sponsored benefits from this employer during your paid leave from PFML?"
    name="has_employer_benefits"
    onChange={[Function]}
    type="radio"
    value={true}
  />
</QuestionPage>
`;

exports[`EmployerBenefits when the claim does not contain employer benefits data renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Other leave, benefits, and income"
>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint={
      <React.Fragment>
        <LeaveDatesAlert
          endDate="2021-06-01"
          startDate="2021-01-01"
        />
        <p>
          The employer-sponsored benefits you must report are:
        </p>
        <ul
          className="usa-list"
        >
          <li>
            Temporary disability insurance, for either short-term or long-term disability
          </li>
          <li>
            Permanent disability insurance
          </li>
          <li>
            Family or medical leave benefits, such as a parental leave program
          </li>
        </ul>
        <Trans
          i18nKey="pages.claimsEmployerBenefits.hintBody"
          tOptions={
            Object {
              "employer_fein": "12-3456789",
            }
          }
        />
      </React.Fragment>
    }
    label="Will you use any employer-sponsored benefits from this employer during your paid leave from PFML?"
    name="has_employer_benefits"
    onChange={[Function]}
    type="radio"
    value=""
  />
</QuestionPage>
`;
